# tianji

./: .env.prod.example  .gitignore  HANDOFF-求签沉浸式改版.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: launch.json
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260715_1008_5162ada3a7e3_init_schema.py  20260715_1200_fd157a1fa9f2_add_passage_tags.py  20260716_0900_a1b2c3d4e5f6_add_chat_sessions.py  20260716_1400_c9d0e1f2a3b4_drop_book_passage_tables.py  20260716_1800_d4e5f6a7b8c9_add_qian_saved.py
apps/api/app/: constants.py  main.py  models.py  schemas.py  seed.py
apps/api/app/core/: config.py  db.py  errors.py  redis_client.py  security.py
apps/api/app/data/: books.py  qians.py
apps/api/app/knowledge/: __init__.py  chunker.py  graph_builder.py  graph_catalog.py  ingest.py  qianpu.py  runtime.py  source_extractors.py  topics.py  wiki.py
apps/api/app/providers/llm/: __init__.py  base.py  mock.py  openai_compatible.py
apps/api/app/providers/moderation/: __init__.py
apps/api/app/routers/: auth.py  chat.py  incense.py  meta.py  payment.py  profile.py  qian.py  scripture.py  wiki.py  wish.py
apps/api/app/services/: auth.py  bazi.py  chat.py  incense.py  order.py  profile.py  qian.py  quota.py  scripture.py  wiki.py  wish.py
apps/api/tests/: test_auth_sms.py  test_bazi.py  test_knowledge_graph.py  test_knowledge_runtime.py  test_moderation_and_schema.py  test_qian.py  test_quota.py  test_wiki_browse.py  test_wish.py
(+799 files in other folders)
